# t2d2-sdk

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: publish_pypi.yaml  sphinx.yml
_sources/: index.rst.txt
_static/: documentation_options.js  params.js
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
src/: condition_report_service.py  t2d2_api.py  t2d2_sdk.py  test.py  utils.py
tests/: t2d2_test.py  test_datasets.py
